# LedgerMind

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  cache.md  examples.md  index.md  mcp-tools.md  privacy.md  roadmap.md  setup.md  skills.md
docs/planning/: checklist.md  initial_plan.md  mvp_ui_plan.md  phase5_release.md  phase6_future.md
examples/: prompts.md
examples/sample-configs/: debt-metadata.example.yaml
examples/sample-outputs/: README.md  snapshot.example.json
src/ledgermind/: __init__.py  cli.py  config.py  exceptions.py  logging.py  session.py
src/ledgermind/api/: ynab_client.py
src/ledgermind/cache/: __init__.py  sqlite.py
src/ledgermind/domain/: __init__.py  budgets.py  dates.py  models.py  normalization.py  transactions.py  types.py
src/ledgermind/mcp/: __init__.py  handlers.py  registry.py  server.py
src/ledgermind/services/: __init__.py  debt.py  debt_metadata.py  forecasting.py  goals.py  snapshot.py  spending.py  subscriptions.py
src/ledgermind/skills/: README.md
src/ledgermind/web/: __init__.py  app.py  routes_api.py  schemas.py  session_store.py
tests/: test_web_app.py
tests/integration/: test_mcp_tool_shapes.py
tests/unit/: test_budgets_domain.py  test_debt_sim.py  test_goals.py  test_normalization.py  test_session_resolve.py  test_snapshot.py  test_ynab_client.py
(+10 files in other folders)
